<resources>
    <string name="app_name">Shoe Store Inventory</string>

    <!-- Fragments titles -->
    <string name="fragment_login">Login</string>
    <string name="fragment_welcome">Welcome</string>
    <string name="fragment_instruction">Instructions</string>
    <string name="fragment_list">Shoes</string>
    <string name="fragment_detail">New Shoe</string>

    <!-- Login screen-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>

    <!-- Welcome screen -->
    <string name="welcome_text">Welcome to the Shoe Store Inventory</string>
    <string name="welcome_description">Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="instruction_button">Open instructions</string>

    <!-- Welcome screen -->
    <string name="instruction_text">Follow the below steps to manager your shoes</string>
    <string name="instruction_description">Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="shoe_list_button">Open Shoes</string>

    <!-- List screen -->
    <string name="logout">Logout</string>
    <string name="floating_add_button">Add New Shoe</string>

    <!-- Detail screen -->
    <string name="name_label">Name</string>
    <string name="name_hint_label">Input the shoe name</string>
    <string name="company_label">Company</string>
    <string name="company_hint_label">Input the company name</string>
    <string name="size_label">Size</string>
    <string name="size_hint_label">Input the size</string>
    <string name="description_label">Description</string>
    <string name="description_hint_label">Input the description</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
</resources>
