<?xml version="1.0" encoding="utf-8"?>
<!-- I used ConstraintLayout because this is a complex screen and ConstraintLayout allows to position views a flexible way. -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.DetailFragment">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/layout_margin">


        <TextView
            android:id="@+id/name_label"
            style="@style/LabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name"
            style="@style/InputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/name_hint_label"
            android:ems="10"
            android:text="@={viewModel.newShoe.name}"
            android:hint="@string/name_hint_label"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/name_label" />

        <TextView
            android:id="@+id/company_label"
            style="@style/LabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company_label"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <EditText
            android:id="@+id/company"
            style="@style/InputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/company_hint_label"
            android:ems="10"
            android:text="@={viewModel.newShoe.company}"
            android:hint="@string/company_hint_label"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/company_label" />

        <TextView
            android:id="@+id/size_label"
            style="@style/LabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/size_label"
            app:layout_constraintTop_toBottomOf="@+id/company" />

        <EditText
            android:id="@+id/size"
            style="@style/InputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/size_hint_label"
            android:ems="10"
            android:text="@={viewModel.newShoe.size}"
            android:hint="@string/size_hint_label"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@+id/size_label" />

        <TextView
            android:id="@+id/description_label"
            style="@style/LabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_label"
            app:layout_constraintTop_toBottomOf="@+id/size" />

        <EditText
            android:id="@+id/description"
            style="@style/InputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/description_hint_label"
            android:ems="3"
            android:lines="3"
            android:text="@={viewModel.newShoe.description}"
            android:gravity="start|top"
            android:hint="@string/description_hint_label"
            android:inputType="textMultiLine"
            app:layout_constraintTop_toBottomOf="@+id/description_label" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/CancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:onClick="@{() -> viewModel.onCancel()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <Button
            android:id="@+id/save_button"
            style="@style/SaveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"
            android:text="@string/save_button"
            app:layout_constraintBottom_toBottomOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="@{() -> viewModel.onSave()}"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintTop_toTopOf="@+id/cancel_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>