<?xml version="1.0" encoding="utf-8"?>
<!-- I used LinearLayout because this is a simple screen and organized the views vertically in a single line seemed to be the better option. -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.WelcomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/layout_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome_text"
            style="@style/WelcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text" />

        <TextView
            android:id="@+id/shoe_store_description"
            style="@style/WelcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:text="@string/welcome_description"
            />

        <Button
            android:layout_marginTop="@dimen/layout_margin"
            android:id="@+id/instruction_button"
            style="@style/InstructionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/instruction_button" />

    </LinearLayout>

</layout>