<?xml version="1.0" encoding="utf-8"?>
<!-- I used ConstraintLayout because this is a complex screen and ConstraintLayout allows to position views a flexible way. -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.LoginFragment">

    <data>

        <variable
            name="loginViewModel"
            type="com.udacity.shoestore.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/layout_margin"
        android:paddingTop="@dimen/layout_margin"
        android:paddingRight="@dimen/layout_margin"
        android:paddingBottom="@dimen/layout_margin">

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.531"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.252" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"
            app:layout_constraintVertical_bias="0.027" />

        <Button
            android:id="@+id/login_button"
            style="@style/ShoeStoreButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginBottom="@dimen/layout_margin"
            android:background="@color/login_button_color"
            android:onClick="@{() -> loginViewModel.onSignIn() }"
            android:text="@string/action_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/register_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <Button
            android:id="@+id/register_button"
            style="@style/ShoeStoreButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="@dimen/layout_margin"
            android:background="@color/register_button_color"
            android:onClick="@{() -> loginViewModel.onRegister() }"
            android:text="@string/action_register"
            app:layout_constraintBottom_toBottomOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/login_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>